[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VeVaPy"
version = "0.1"
authors = [
  { name="Christopher Parker (University of Cincinnati)", email="parkecp@mail.uc.edu" },
]
description = "A Python package for streamlined V&V of HPA axis models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "IPython",
    "Jupyterlab",
    "functools",
    "tabulate",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.setuptools.packages]
find = {}

[project.urls]
"Homepage" = "https://github.com/cparker-uc/VeVaPy"
